--- a/index.html
+++ b/index.html
@@ -1,99 +1,113 @@
 <!DOCTYPE html>
 <html lang="el">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Το Πορτφόλιό Μου</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --primary-color: #007bff;
+      --secondary-color: #f8f9fa;
+      --text-color: #333;
+      --button-bg: #28a745;
+      --button-hover: #218838;
+    }
+
     * {
       box-sizing: border-box;
     }
 
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 20px;
-      background-color: #f0f4f8;
-      color: #333;
-      text-align: center;
+      font-family: 'Inter', sans-serif;
+      background-color: var(--secondary-color);
+      color: var(--text-color);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 30px 15px;
     }
 
     header {
-      margin-bottom: 20px;
+      text-align: center;
+      margin-bottom: 30px;
     }
 
-    h1 {
-      font-size: 2.5em;
+    header h1 {
+      font-size: 2.5rem;
       margin-bottom: 10px;
     }
 
-    h2 {
-      font-size: 1.5em;
-      margin-top: 10px;
-    }
-
-    img {
-      width: 150px;
-      height: 150px;
+    header img {
+      width: 160px;
+      height: 160px;
       border-radius: 50%;
       object-fit: cover;
+      border: 4px solid var(--primary-color);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       margin: 20px 0;
-      border: 3px solid #007BFF;
     }
 
-    button {
-      margin-top: 20px;
-      padding: 12px 24px;
-      font-size: 16px;
-      border: none;
-      background-color: #28a745;
+    header h2 {
+      font-size: 1.5rem;
+      margin-top: 0;
+      font-weight: 600;
+    }
+
+    button.toggle-btn {
+      background-color: var(--button-bg);
       color: white;
+      border: none;
+      padding: 12px 24px;
+      font-size: 1rem;
       border-radius: 8px;
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
 
-    button:hover {
-      background-color: #218838;
+    button.toggle-btn:hover {
+      background-color: var(--button-hover);
     }
 
-    .cert-btns {
+    .cert-container {
       display: none;
-      margin-top: 20px;
       flex-direction: column;
       align-items: center;
-      gap: 10px;
+      gap: 15px;
+      margin-top: 25px;
+      width: 100%;
+      max-width: 400px;
     }
 
-    .cert-btns a {
-      display: inline-block;
-      padding: 12px 20px;
-      width: 80%;
-      max-width: 300px;
-      background-color: #007BFF;
-      color: white;
+    .cert-container a {
       text-decoration: none;
+      background-color: var(--primary-color);
+      color: white;
+      padding: 12px 20px;
       border-radius: 6px;
+      width: 100%;
+      text-align: center;
       transition: background-color 0.3s ease;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
 
-    .cert-btns a:hover {
+    .cert-container a:hover {
       background-color: #0056b3;
     }
 
     @media (max-width: 600px) {
-      h1 {
-        font-size: 2em;
+      header h1 {
+        font-size: 2rem;
       }
 
-      img {
+      header img {
         width: 120px;
         height: 120px;
       }
 
-      button, .cert-btns a {
-        width: 90%;
-        font-size: 15px;
+      .cert-container a {
+        font-size: 0.95rem;
       }
     }
   </style>
@@ -102,22 +116,22 @@
 
   <header>
     <h1>Το Πορτφόλιό Μου</h1>
-    <img src="profile.jpg" alt="Η εικόνα μου">
-    <h2>Το Όνομά Σου</h2>
+    <img src="profile.jpg" alt="Εικόνα προφίλ">
+    <h2>Δημήτρης Β.</h2>
   </header>
 
-  <button onclick="toggleCertificates()">Πιστοποιήσεις</button>
+  <button class="toggle-btn" onclick="toggleCerts()">Πιστοποιήσεις</button>
 
-  <div id="certSection" class="cert-btns">
-    <a href="cert1.pdf" target="_blank">Πιστοποίηση 1</a>
-    <a href="cert2.pdf" target="_blank">Πιστοποίηση 2</a>
-    <a href="degree.pdf" target="_blank">Πτυχίο</a>
+  <div id="certs" class="cert-container">
+    <a href="cert1.pdf" target="_blank">Πιστοποίηση JavaScript</a>
+    <a href="cert2.pdf" target="_blank">Πιστοποίηση Python</a>
+    <a href="degree.pdf" target="_blank">Πτυχίο Πανεπιστημίου</a>
   </div>
 
   <script>
-    function toggleCertificates() {
-      const section = document.getElementById("certSection");
-      section.style.display = (section.style.display === "flex") ? "none" : "flex";
+    function toggleCerts() {
+      const certSection = document.getElementById('certs');
+      certSection.style.display = (certSection.style.display === 'flex') ? 'none' : 'flex';
     }
   </script>
 
