--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 <body>
 
   <header>
-    <h1>Το Πορτφόλιό Μου</h1>
+    <h1>Το Βιογραφικό μου</h1>
     <img src="profile.jpg" alt="Εικόνα προφίλ">
-    <h2>Δημήτρης Β.</h2>
+    <h2>Δημήτρης Βασίλτσης</h2>
   </header>
 
   <div class="button-group">
