--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
   <!-- Ξένες Γλώσσες -->
   <div id="languages" class="section-container">
-    <a href="english-cert.pdf" target="_blank">English B2</a>
+    <a href="foreignlang/Πτυχίο Proficinency.pdf" target="_blank">English B2</a>
     <a href="german-cert.pdf" target="_blank">German A2</a>
   </div>
 
