--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
   <!-- Ξένες Γλώσσες -->
   <div id="languages" class="section-container">
-    <a href="foreignlang/prof.pdf" target="_blank">English B2</a>
+    <a href="foreignlang/prof.pdf" target="_blank">ESB English Certificate C2</a>
     <a href="german-cert.pdf" target="_blank">German A2</a>
   </div>
 
