--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
       flex-direction: column;
       align-items: center;
       padding: 30px 15px;
-    }
 
+      background-image: url('images/coding-bg.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed; /* σταθερή κατά την κύλιση */
+    }
+    
     header {
       text-align: center;
       margin-bottom: 30px;
