--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       align-items: center;
       padding: 30px 15px;
 
-      background-image: url('images/coding-bg.jpg');
+      background-image: url('background.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
