--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       background-position: center;
       background-repeat: no-repeat;
       background-attachment: fixed; /* σταθερή κατά την κύλιση */
+      background-color: rgba(0, 0, 0, 0.25); /* 25% μαύρο */
+
     }
     
     header {
