--- a/index.html
+++ b/index.html
@@ -33,9 +33,18 @@
       background-position: center;
       background-repeat: no-repeat;
       background-attachment: fixed; /* σταθερή κατά την κύλιση */
-      background-color: rgba(0, 0, 0, 0.25); /* 25% μαύρο */
 
     }
+
+    .overlay {
+    background-color: rgba(0, 0, 0, 0.25);  /* 25% μαύρο tint */
+    min-height: 100vh;
+    width: 100%;
+    padding: 30px 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
     
     header {
       text-align: center;
