--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
 
     <!-- Πιστοποιήσεις -->
     <div id="certs" class="section-container">
-      <a href="cert1.pdf" target="_blank">Πιστοποίηση JavaScript</a>
-      <a href="cert2.pdf" target="_blank">Πιστοποίηση Python</a>
+      <a href="certifications\ecdl.pdf" target="_blank">Πιστοποίηση ECDL Profile Certificate</a>
+      <a href="certifications\python.pdf" target="_blank">Πιστοποίηση Python</a>
     </div>
 
     <!-- Πτυχία -->
