--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
     <!-- Πιστοποιήσεις -->
     <div id="certs" class="section-container">
-      <a href="certifications\ecdl.pdf" target="_blank">Πιστοποίηση ECDL Profile Certificate</a>
+      <a href="certifications/ecdl.pdf" target="_blank">Πιστοποίηση ECDL Profile Certificate</a>
       <a href="certifications\python.pdf" target="_blank">Πιστοποίηση Python</a>
     </div>
 
