--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <!-- Πιστοποιήσεις -->
     <div id="certs" class="section-container">
       <a href="certifications/ecdl.pdf" target="_blank">Πιστοποίηση ECDL Profile Certificate</a>
-      <a href="certifications\python.pdf" target="_blank">Πιστοποίηση Python</a>
+      <a href="certifications/azureAIessentials.pdf" target="_blank">Πιστοποίηση Azure AI Essentials</a>
     </div>
 
     <!-- Πτυχία -->
