--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Το Πορτφόλιό Μου</title>
+  <title>D. Vasiltsis</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -50,7 +50,7 @@
     }
 
     header h1 {
-      font-size: 2.5rem;
+      font-size: 2.0rem;
       margin-bottom: 10px;
       color: var(--text-color);
     }
@@ -148,32 +148,32 @@
 <body>
   <div class="overlay">
     <header>
-      <h1>Το Βιογραφικό μου</h1>
-      <img src="profile.jpg" alt="Εικόνα προφίλ">
-      <h2>Δημήτρης Βασίλτσης</h2>
+      <h1>Dimitrios Vasiltsis - Curriculum Vitae</h1>
+      <img src="profile.jpg" alt="Profile Picture">
+      <h2>Undergraduate Student studying Computer Science in Democritus University of Thrace, Kavala Campus</h2>
     </header>
 
     <div class="button-group">
-      <button class="toggle-btn" onclick="toggleSection('certs')">Πιστοποιήσεις</button>
-      <button class="toggle-btn" onclick="toggleSection('degrees')">Πτυχία</button>
-      <button class="toggle-btn" onclick="toggleSection('languages')">Ξένες Γλώσσες</button>
+      <button class="toggle-btn" onclick="toggleSection('certs')">Certifications</button>
+      <button class="toggle-btn" onclick="toggleSection('degrees')">Degrees</button>
+      <button class="toggle-btn" onclick="toggleSection('languages')">Foreign Languages</button>
     </div>
 
     <!-- Πιστοποιήσεις -->
     <div id="certs" class="section-container">
-      <a href="certifications/ecdl.pdf" target="_blank">Πιστοποίηση ECDL Profile Certificate</a>
-      <a href="certifications/azureAIessentials.pdf" target="_blank">Πιστοποίηση Azure AI Essentials</a>
+      <a href="certifications/ecdl.pdf" target="_blank">ECDL Profile Certificate</a>
+      <a href="certifications/azureAIessentials.pdf" target="_blank">Azure AI Essentials</a>
+      <a href="certifications/univators.pdf" target="_blank">Backend Web Development using ASP.NET</a>
     </div>
 
     <!-- Πτυχία -->
     <div id="degrees" class="section-container">
-      <a href="degree.pdf" target="_blank">Πτυχίο Πληροφορικής</a>
+      <a href="degree.pdf" target="_blank">Computer Science Degree</a>
     </div>
 
     <!-- Ξένες Γλώσσες -->
     <div id="languages" class="section-container">
       <a href="foreignlang/prof.pdf" target="_blank">ESB English Certificate C2</a>
-      <a href="german-cert.pdf" target="_blank">German A2</a>
     </div>
   </div>
 
