--- a/index.html
+++ b/index.html
@@ -186,5 +186,18 @@
       });
     }
   </script>
+
+  <!-- Floating CV Button -->
+<a href="cv.pdf" target="_blank" class="toggle-btn cv-button">Detailed CV</a>
+
+<style>
+  .cv-button {
+    position: fixed;
+    bottom: 20px;   /* Απόσταση από κάτω */
+    right: 20px;    /* Απόσταση από δεξιά */
+    z-index: 1000;  /* Να εμφανίζεται πάνω από άλλα στοιχεία */
+  }
+</style>
+
 </body>
 </html>
