--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   </script>
 
   <!-- Floating CV Button -->
-<a href="cv.pdf" target="_blank" class="toggle-btn cv-button">Detailed CV</a>
+<a href="detailedCV/cv.pdf" target="_blank" class="toggle-btn cv-button">Detailed CV</a>
 
 <style>
   .cv-button {
@@ -196,6 +196,8 @@
     bottom: 20px;   /* Απόσταση από κάτω */
     right: 20px;    /* Απόσταση από δεξιά */
     z-index: 1000;  /* Να εμφανίζεται πάνω από άλλα στοιχεία */
+    text-decoration: none; /* Αφαιρεί την υπογράμμιση */
+
   }
 </style>
 
