--- a/index.html
+++ b/index.html
@@ -151,6 +151,77 @@
       <h1>Dimitrios Vasiltsis - Curriculum Vitae</h1>
       <img src="profile.jpg" alt="Profile Picture">
       <h2>Undergraduate Student studying Computer Science in Democritus University of Thrace, Kavala Campus</h2>
+
+    <!-- Social Media Icons -->
+    <div class="social-icons">
+    <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
+      <!-- LinkedIn Icon -->
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" viewBox="0 0 24 24">
+        <path d="M19 0h-14c-2.77 0-5 2.23-5 5v14c0 2.77 
+        2.23 5 5 5h14c2.77 0 5-2.23 
+        5-5v-14c0-2.77-2.23-5-5-5zm-11 
+        19h-3v-10h3v10zm-1.5-11.27c-.96 
+        0-1.73-.78-1.73-1.73s.78-1.73 
+        1.73-1.73 1.73.78 
+        1.73 1.73-.78 1.73-1.73 
+        1.73zm13.5 11.27h-3v-5.6c0-1.34-.03-3.07-1.87-3.07-1.87 
+        0-2.16 1.46-2.16 2.97v5.7h-3v-10h2.88v1.37h.04c.4-.75 
+        1.38-1.54 2.84-1.54 3.04 0 3.6 
+        2 3.6 4.6v5.6z"/>
+      </svg>
+    </a>
+
+    <a href="https://www.instagram.com/yourprofile" target="_blank" aria-label="Instagram">
+      <!-- Instagram Icon -->
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" viewBox="0 0 24 24">
+        <path d="M12 2.163c3.204 0 3.584.012 
+        4.85.07 1.366.062 2.633.35 
+        3.608 1.325.975.975 1.262 
+        2.242 1.324 3.608.058 1.266.07 
+        1.646.07 4.85s-.012 3.584-.07 
+        4.85c-.062 1.366-.35 2.633-1.324 
+        3.608-.975.975-2.242 1.262-3.608 
+        1.324-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.35-3.608-1.324-.975-.975-1.262-2.242-1.324-3.608-.058-1.266-.07-1.646-.07-4.85s.012-3.584.07-4.85c.062-1.366.35-2.633 
+        1.324-3.608.975-.975 2.242-1.262 
+        3.608-1.324 1.266-.058 1.646-.07 
+        4.85-.07zm0-2.163c-3.259 
+        0-3.667.012-4.947.071-1.281.06-2.556.34-3.637 
+        1.42-1.081 1.081-1.361 2.356-1.42 
+        3.637-.059 1.28-.071 1.688-.071 
+        4.947s.012 3.667.071 4.947c.06 
+        1.281.34 2.556 1.42 3.637 1.081 
+        1.081 2.356 1.361 3.637 1.42 1.28.059 
+        1.688.071 4.947.071s3.667-.012 
+        4.947-.071c1.281-.06 2.556-.34 
+        3.637-1.42 1.081-1.081 1.361-2.356 
+        1.42-3.637.059-1.28.071-1.688.071-4.947s-.012-3.667-.071-4.947c-.06-1.281-.34-2.556-1.42-3.637-1.081-1.081-2.356-1.361-3.637-1.42-1.28-.059-1.688-.071-4.947-.071z"/>
+        <path d="M12 5.838a6.162 6.162 0 1 0 
+        0 12.324 6.162 6.162 0 0 0 
+        0-12.324zm0 10.162a3.999 3.999 0 
+        1 1 0-7.998 3.999 3.999 0 0 1 
+        0 7.998z"/>
+        <circle cx="18.406" cy="5.594" r="1.44"/>
+      </svg>
+    </a>
+
+    <a href="https://www.facebook.com/yourprofile" target="_blank" aria-label="Facebook">
+      <!-- Facebook Icon -->
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" viewBox="0 0 24 24">
+        <path d="M22.675 0h-21.35c-.732 
+        0-1.325.593-1.325 
+        1.325v21.351c0 .731.593 
+        1.324 1.325 
+        1.324h11.494v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 
+        1.893-4.788 4.659-4.788 1.325 
+        0 2.464.099 2.795.143v3.24l-1.918.001c-1.504 
+        0-1.796.715-1.796 1.763v2.312h3.587l-.467 
+        3.622h-3.12v9.294h6.116c.73 
+        0 1.323-.593 
+        1.323-1.324v-21.35c0-.732-.593-1.325-1.324-1.325z"/>
+      </svg>
+    </a>
+  </div>
+
     </header>
 
     <div class="button-group">
@@ -198,6 +269,23 @@
     z-index: 1000;  /* Να εμφανίζεται πάνω από άλλα στοιχεία */
     text-decoration: none; /* Αφαιρεί την υπογράμμιση */
 
+  }
+</style>
+
+<style>
+  .social-icons {
+    display: flex;
+    gap: 18px;
+    margin-top: 15px;
+    justify-content: center;
+  }
+
+  .social-icons a {
+    transition: transform 0.2s ease;
+  }
+
+  .social-icons a:hover {
+    transform: scale(1.15);
   }
 </style>
 
