social links added

--- a/index.html
+++ b/index.html
@@ -151,10 +151,17 @@
       <h1>Dimitrios Vasiltsis - Curriculum Vitae</h1>
       <img src="profile.jpg" alt="Profile Picture">
       <h2>Undergraduate Student studying Computer Science in Democritus University of Thrace, Kavala Campus</h2>
+    </header>
+
+    <div class="button-group">
+      <button class="toggle-btn" onclick="toggleSection('certs')">Certifications</button>
+      <button class="toggle-btn" onclick="toggleSection('degrees')">Degrees</button>
+      <button class="toggle-btn" onclick="toggleSection('languages')">Foreign Languages</button>
+    </div>
 
     <!-- Social Media Icons -->
     <div class="social-icons">
-    <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
+    <a href="https://www.linkedin.com/in/dimitrios-vasiltsis-313977287" target="_blank" aria-label="LinkedIn">
       <!-- LinkedIn Icon -->
       <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" viewBox="0 0 24 24">
         <path d="M19 0h-14c-2.77 0-5 2.23-5 5v14c0 2.77 
@@ -171,7 +178,7 @@
       </svg>
     </a>
 
-    <a href="https://www.instagram.com/yourprofile" target="_blank" aria-label="Instagram">
+    <a href="https://www.instagram.com/dimitris_vas1/" target="_blank" aria-label="Instagram">
       <!-- Instagram Icon -->
       <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" viewBox="0 0 24 24">
         <path d="M12 2.163c3.204 0 3.584.012 
@@ -204,7 +211,7 @@
       </svg>
     </a>
 
-    <a href="https://www.facebook.com/yourprofile" target="_blank" aria-label="Facebook">
+    <a href="https://www.facebook.com/dimitris.vasiltsis/" target="_blank" aria-label="Facebook">
       <!-- Facebook Icon -->
       <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" viewBox="0 0 24 24">
         <path d="M22.675 0h-21.35c-.732 
@@ -221,14 +228,6 @@
       </svg>
     </a>
   </div>
-
-    </header>
-
-    <div class="button-group">
-      <button class="toggle-btn" onclick="toggleSection('certs')">Certifications</button>
-      <button class="toggle-btn" onclick="toggleSection('degrees')">Degrees</button>
-      <button class="toggle-btn" onclick="toggleSection('languages')">Foreign Languages</button>
-    </div>
 
     <!-- Πιστοποιήσεις -->
     <div id="certs" class="section-container">
