--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
     }
 
     .overlay {
-      background-color: rgba(0, 0, 0, 0.6);  /* σκοτεινό tint */
+      background-color: rgba(0, 0, 0, 0.8);  /* σκοτεινό tint */
       min-height: 100vh;
       width: 100%;
       padding: 30px 15px;
       display: flex;
       flex-direction: column;
       align-items: center;
+      max-width: 800px; /* περιορίζει το πλάτος */
+      margin: 30px auto; /* κεντράρει το overlay */
     }
 
     header {
