--- a/index.html
+++ b/index.html
@@ -35,15 +35,14 @@
     }
 
     .overlay {
-      background-color: rgba(0, 0, 0, 0.8);  /* σκοτεινό tint */
-      min-height: 100vh;
+      background-color: rgba(0, 0, 0, 0.9);  /* σκοτεινό tint */
+      min-height: auto;
       width: 100%;
       padding: 30px 15px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      max-width: 800px; /* περιορίζει το πλάτος */
-      margin: 30px auto; /* κεντράρει το overlay */
+      max-height: auto;
     }
 
     header {
