--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       flex-direction: column;
       align-items: center;
       padding: 30px 15px;
-      background-image: url('background.jpg');
+      background-image: url('background (1).jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
