--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
   <div class="overlay">
     <header>
       <h1>Dimitrios Vasiltsis - Curriculum Vitae</h1>
-      <img src="profile.jpg" alt="Profile Picture">
-      <h2>Undergraduate Student studying Computer Science in Democritus University of Thrace, Kavala Campus</h2>
+      <img src="profile.jpg" alt="Profile Picture"></div>
+      <h2>Computer Science Undergraduate Student at Democritus University of Thrace, Kavala</h2>
     </header>
 
     <div class="button-group">
