--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <div class="overlay">
     <header>
       <h1>Dimitrios Vasiltsis - Curriculum Vitae</h1>
-      <img src="profile.jpg" alt="Profile Picture"></div>
+      <img src="profile.jpg" alt="Profile Picture">
       <h2>Computer Science Undergraduate Student at Democritus University of Thrace, Kavala</h2>
     </header>
 
